<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Video Streaming App</string>
    <string name="menu_home">Home</string>
    <string name="menu_tv_show">TV Shows</string>
    <string name="menu_movie">Movies</string>
    <string name="menu_sport">Sports</string>
    <string name="menu_tv">Live TV</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_watch_list">Watchlist</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="name_login">Name</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account">Don\'t Have an Account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_account">Already Have an Account? </string>
    <string name="forgot_description">Enter your email address below and  we\'ll send you email with password</string>
    <string name="button_text_forgot_password">Forgot your password?</string>
    <string name="please_enter_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="or_continue">Or Continue with</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">2.1.5(1020)</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">Viavi Webtech</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">info@viaviweb.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.viaviweb.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (123) (456) (5678)</string>
    <string name="about_us_about">About</string>
    <string name="enable_push">Enable Push Notification</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="name">Name :-</string>
    <string name="email">Email :-</string>
    <string name="phone">Phone :-</string>
    <string name="password">Password :-</string>
    <string name="address">Address :-</string>
    <string name="profile_name_hint">Enter Name</string>
    <string name="profile_email_hint">Enter Email</string>
    <string name="profile_password_hint">Enter Password</string>
    <string name="profile_phone_hint">Enter Phone</string>
    <string name="profile_address_hint">Enter Address</string>
    <string name="save">Save Profile</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="subscription_msg">Full access to all free and premium content with download also. choose plan based on your usage. Below there are plan name,price and validity days. for explore select free plan.</string>
    <string name="select_subscription_plan">Select Your Subscription Plan</string>
    <string name="subscription_proceed">PROCEED</string>
    <string name="user_info">User Information</string>
    <string name="user_info_plan">You have selected :- </string>
    <string name="choose_plan">You are logged in as %s. If you would like to use a Different account for this subscription,Logout Now.</string>
    <string name="change_plan">Change Plan</string>
    <string name="payment_option">Payment Option</string>
    <string name="paypal">PayPal</string>
    <string name="stripe">Stripe</string>
    <string name="razor_pay">RazorPay</string>
    <string name="pay_stack">PayStack</string>
    <string name="plan_day_for">/ For %s</string>
    <string name="no_payment_gateway">There is currently not any payment gateway is available so Please choose Free Plan. </string>
    <string name="select_gateway">Please select any one of them payment options</string>
    <string name="razor_pay_company">Viavi Streaming</string>
    <string name="stripe_company">Viavi Streaming</string>
    <string name="stripe_token_error">Some error occurred when generating stripe token</string>
    <string name="isRTL">false</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="no_item_found">No Item Found</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="loading">Loading</string>
    <string name="watch_now">Watch Now</string>
    <string name="back_key">Please click BACK again to exit</string>
    <string name="filter">Filter</string>
    <string name="filter_newest">NEWEST</string>
    <string name="filter_oldest">OLDEST</string>
    <string name="filter_alpha">A to Z</string>
    <string name="filter_random">RANDOM</string>
    <string name="duration">Duration:</string>
    <string name="category_details">Category:</string>
    <string name="related_movie">Related Movies</string>
    <string name="related_sport">Related Sport</string>
    <string name="related_show">Related Shows</string>
    <string name="related_tv">Related TV</string>
    <string name="see_all">SEE ALL</string>
    <string name="no_episode_found">No Episode Found</string>
    <string name="view_all">See All</string>
    <string name="invalid_license">Invalid License</string>
    <string name="license_msg">You are using invalid License or Package name is already in use, for more information contact us: info@viaviweb.com or viaviwebtech@gmail.com</string>
    <string name="something_went">Something went wrong please restart application</string>
    <string name="user_disable">Admin was disable or deleted you as user</string>
    <string name="home_recently_watched">Recently Watched</string>
    <string name="home_latest_movie">Latest Movies</string>
    <string name="home_upcoming_movie">Upcoming Movies</string>
    <string name="home_upcoming_show">Upcoming Shows</string>
    <string name="edit">Edit</string>
    <string name="my_subscription">My Subscription</string>
    <string name="current_plan">Current Plan :</string>
    <string name="expire_on">Subscription expires on  %s</string>
    <string name="upgrade_plan">Upgrade Plan</string>
    <string name="last_invoice">Last Invoice</string>
    <string name="last_invoice_date">Date :</string>
    <string name="last_invoice_plan">Plan :</string>
    <string name="last_invoice_amount">Amount :</string>
    <string name="n_a">N/A</string>
    <string name="pay_via">Pay : %s %s via %s</string>
    <string name="payment">Payment</string>
    <string name="paypal_payment_error_1">an extremely unlikely failure occurred</string>
    <string name="paypal_payment_error_2">The user canceled.</string>
    <string name="paypal_payment_error_3">An invalid Payment was submitted</string>
    <string name="paypal_payment_error_4">Paypal failure</string>
    <string name="razor_payment_error_1">Razor Pay failure</string>
    <string name="pay_stack_error_1">PayStack failure</string>
    <string name="stripe_payment_error_1">Stripe failure</string>
    <string name="proceed_with_payment">Now Proceed with Payment</string>
    <string name="try_again">Try Again</string>
    <string name="stream_not_found">Unfortunately stream url does not found please report it</string>
    <string name="download_not_found">Unfortunately download url does not found please report it</string>
    <string name="premium">Premium </string>
    <string name="premium_content">You don\'t have access to premium content kindly purchase subscription to watch this content or LOGIN with premium account. </string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="login_first">You have to login first for purchasing premium content</string>
    <string name="download">Download</string>
    <string name="invalid_download">Download url does not supported.</string>
    <string name="player_setting">Setting</string>
    <string name="quality">Quality</string>
    <string name="quality_default">default</string>
    <string name="quality_420p">420p</string>
    <string name="quality_720p">720p</string>
    <string name="quality_1080p">1080p</string>
    <string name="sub_titles">Subtitles</string>
    <string name="off_sub_title">OFF</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login_with_facebook">Facebook</string>
    <string name="login_with_gmail">Google</string>
    <string name="casty_introduction_text">Use this button to connect with Chromecast</string>
    <string name="cast_youtube">Youtube and Embedded link direct does not cast</string>
    <string name="cast_play_custom">Playing in Connected Chromecast</string>
    <string name="play_on_cast">Play on Cast</string>
    <string name="share">Share</string>
    <string name="content_rating">Content Rating %s</string>
    <string name="trailer">Trailer</string>
    <string name="view">Views %s</string>
    <string name="actor">Actors</string>
    <string name="director">Directors</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="coupon_code_enter">Enter your coupon code</string>
    <string name="coupon_code_lbl">I have coupon code</string>
    <string name="submit">Submit</string>
    <string name="app_update_title">App Update</string>
    <string name="app_update_btn">Update</string>
    <string name="app_cancel_btn">Cancel</string>
    <string name="my_watch_list">My Watchlist</string>
    <string name="add_to_watch_list">Add to Watchlist</string>
    <string name="remove_from_watch_list">Remove from Watchlist</string>
    <string name="login_first_watch_list">You have to login first for add to watchlist</string>
    <string name="login_first_see_watch_list">You have to login first for see watchlist</string>
    <string name="login_first_see_account">You have to login first for see my account</string>
    <string name="sign_in_accept">By Signing in you accept %s and %s </string>
    <string name="sign_up_accept">By Signing up you accept %s and %s </string>
    <string name="please_accept">Please select accept checkbox </string>
    <string name="terms_of_service">Terms</string>
    <string name="imdb">IMDB %s</string>
    <string name="payment_cancel">Payment Cancelled</string>
    <string name="payment_need_phone">Seems you does not have added phone number please enter it in profile because payment need it.</string>
    <string name="payment_token_error">Some error occurred when generating payment token</string>
    <string name="pay_u">PayUMoney</string>
    <string name="paytm">Paytm</string>
    <string name="insta_mojo">InstaMojo</string>
    <string name="cash_free">CashFree</string>
    <string name="flutter_wave">FlutterWave</string>
    <string name="seasons">Seasons</string>
    <string name="no_season_found">No Season Found</string>
    <string name="plan_purchased_title">Congratulations</string>
    <string name="plan_purchased_message">Your new plan have been started successfully</string>
    <string name="plan_purchased_goto">Go to Dashboard</string>
</resources>