<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <ImageView
        android:id="@+id/imageCover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/image_genre_bg" />

    <TextView
        android:id="@+id/textNowPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/cast_play_custom"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play_on_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNowPlay"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/play_on_cast"
        android:textColor="@color/white"
        app:backgroundTint="@color/highlight"
        app:cornerRadius="@dimen/btnRadius" />


</RelativeLayout>